--- a/bse/.cvsignore
+++ b/bse/.cvsignore
@@ -5,3 +5,21 @@ _libs
 Makefile
 Makefile.in
 libbse.la
+bseconfig.h
+bsegentypes.h
+bseconfigpaths.h
+stamp-bsegentypes.h
+bseenum_arrays.c
+stamp-bseenum_arrays.c
+bseenum_list.c
+bsenotifier_array.c
+bsebuiltin_externs.c
+bsebuiltin_array.c
+bsegentypes.c
+bsegentype_array.c
+bsequery
+testtypes
+testsample
+testsong
+testmixer
+testrefs
