provide program data dir for BEAST data files.
Sun Jun 27 10:21:57 1999  Tim Janik  <timj@gtk.org>

        * configure.in: provide program data dir for BEAST data files.

        * autogen.sh: invoke automake with --add-missing

        * beast-gtk/Makefile.am: autogenerate beastconfigpaths.h, install
        beast.glr.

        * beast-gtk/bstmain.c: read beast.glr from beast program data dir.

        * merged ChangeLog and beast-gtk/ChangeLogs.

Sun Jun 27 10:04:46 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstkeytable-de.c:
        * beast-gtk/bstkeytable-us.c:
        * beast-gtk/bstkeytables.c: restructured source files, more stuff to
        come.

        * beast-gtk/bstkeytables-us.c: vanished.

Sun Jun 27 10:11:37 1999  Tim Janik  <timj@gtk.org>

        * Makefile.plugins: ugh, oh. all the time this file was empty and
        wouldn't get remade because of CVS stamps. no it has contents and
        actually compiles (and installs) the plugins.

svn path=/trunk/; revision=22

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,15 @@
-## Beast Makefile.am
+# BEAST/BSE - Bedevilled Audio System / Bedevilled Sound Engine
+# Copyright (C) 1998, 1999 Olaf Hoehmann and Tim Janik
+#
+## Makefile.am for BEAST/BSE
 
+# subdirs with source code to be compiled
 SRC_SUBDIRS = bse plugins beast-gtk
+
+# other subdirs
 SUBDIRS = $(SRC_SUBDIRS) docs
 
+# require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
 
 EXTRA_DIST += \
