use new keyboard stuff and guess, yes we are finally able to do that ;)
Thu Jul  1 11:08:02 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c (main): use new keyboard stuff and guess,
        yes we are finally able to do that ;)

        * configure.in: check for the neccessary bits so we dno't compile
        XKB specific code if the extension is not present.

        * beast-gtk/bstxkb.[hc]: special xlib code to figure
        keyboard type through XKB extension.

        * beast-gtk/bstkeytables.h:
        * beast-gtk/bstkeytables.c:
        * beast-gtk/bstkeytable-base.c:
        * beast-gtk/bstkeytable-us.c:
        * beast-gtk/bstkeytable-de.c:
        revamp, moved the common key codes from us and de into
        bstkeytable-base.c, implemented keypatch administration that
        features keyboard aliases and incremental usage of keypatches.
        the only thing we're lacking now is a GUI front end to choose
        the keyboard layout (and volounteers to contribute keytables ;).

svn path=/trunk/; revision=23

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -35,6 +35,7 @@ beast_headers = $(strip \
 	bstfiledialog.h \
 	bstinstrumentview.h \
 	bstitemview.h \
+	bstkeytables.h \
 	bstmaster.h \
 	bstmenus.h \
 	bstparam.h \
@@ -48,6 +49,7 @@ beast_headers = $(strip \
 	bstsongrouter.h \
 	bststatusbar.h \
 	bstsupershell.h \
+	bstxkb.h \
 )
 # BEAST c sources to build the program from
 beast_sources = $(strip \
@@ -55,6 +57,7 @@ beast_sources = $(strip \
 	bstfiledialog.c \
 	bstinstrumentview.c \
 	bstitemview.c \
+	bstkeytables.c \
 	bstmain.c \
 	bstmaster.c \
 	bstmenus.c \
@@ -69,12 +72,13 @@ beast_sources = $(strip \
 	bstsongrouter.c \
 	bststatusbar.c \
 	bstsupershell.c \
+	bstxkb.c \
 )
 # BEAST c sources that get included (don't have own .lo rules)
 beast_extra_sources = $(strip \
-	bstkeytables.c \
-	bstkeytable-de.c \
+	bstkeytable-base.c \
 	bstkeytable-us.c \
+	bstkeytable-de.c \
 )
 # BEAST program data files
 beast_pdata_DATA = $(strip \
