--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,6 +1,8 @@
-EXTRA_DIST =	\
+EXTRA_DIST = $(strip \
+	bse-categories.txt \
 	bse-concept.txt \
 	bse-data-v1.txt \
 	bse-ep-net.txt \
 	bse-pool-sources.txt \
-	bse-typesystem.txt
+	bse-typesystem.txt \
+)
