wrapped up MASTER debugging stuff.
Fri Oct 15 02:47:33 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmaster.c: wrapped up MASTER debugging stuff.

        * beast-gtk/bstmain.c (bst_parse_args): new function to parse
        --beast-debug, --beast-no-debug args and evaluate BEAST_DEBUG and
        BEAS_NO_DEBUG env vars.

Fri Oct 15 02:09:24 1999  Tim Janik  <timj@gtk.org>

        * bsemain.c (bse_parse_args): added --bse-debug and --bse-no-debug args
        and featuring of BSE_DEBUG and BSE_NO_DEBUG environment variables.

        * bseobject.c: wrapped up NOTIFY and OBJECTS debugging stuff.

        * bsetype.c: wrapped up CLASSES debugging stuff.

svn path=/trunk/; revision=26

--- a/beast-gtk/icons/Makefile
+++ b/beast-gtk/icons/Makefile
@@ -79,7 +79,7 @@ BSE_MICRO_VERSION = 0
 BSE_MINOR_VERSION = 2
 BSE_VERSION = 0.2.0
 CC = gcc
-CFLAGS = -g -ggdb3 -fno-strict-aliasing -fno-cond-mismatch -ffor-scope -Wno-cast-qual -Wall -Wmissing-prototypes -Winline -Wmissing-noreturn -O6 -pipe -fstrength-reduce -fexpensive-optimizations -finline-functions -frerun-cse-after-loop -freg-struct-return -funroll-loops -frerun-loop-opt -fgcse -fno-keep-static-consts
+CFLAGS = -DG_ENABLE_DEBUG -g -ggdb3 -fno-strict-aliasing -fno-cond-mismatch -ffor-scope -Wno-cast-qual -Wall -Wmissing-prototypes -Winline -Wmissing-noreturn -O6 -pipe -fstrength-reduce -fexpensive-optimizations -finline-functions -frerun-cse-after-loop -freg-struct-return -funroll-loops -frerun-loop-opt -fgcse -fno-keep-static-consts
 CPP = gcc -E
 CPPFLAGS = 
 CXXCPP = c++ -E
