--- a/bse/icons/Makefile
+++ b/bse/icons/Makefile
@@ -79,7 +79,7 @@ BSE_MICRO_VERSION = 0
 BSE_MINOR_VERSION = 2
 BSE_VERSION = 0.2.0
 CC = gcc
-CFLAGS = -g -ggdb3 -fno-strict-aliasing -fno-cond-mismatch -ffor-scope -Wno-cast-qual -Wall -Wmissing-prototypes -Winline -Wmissing-noreturn -O6 -pipe -fstrength-reduce -fexpensive-optimizations -finline-functions -frerun-cse-after-loop -freg-struct-return -funroll-loops -frerun-loop-opt -fgcse -fno-keep-static-consts
+CFLAGS = -DG_ENABLE_DEBUG -g -ggdb3 -fno-strict-aliasing -fno-cond-mismatch -ffor-scope -Wno-cast-qual -Wall -Wmissing-prototypes -Winline -Wmissing-noreturn -O6 -pipe -fstrength-reduce -fexpensive-optimizations -finline-functions -frerun-cse-after-loop -freg-struct-return -funroll-loops -frerun-loop-opt -fgcse -fno-keep-static-consts
 CPP = gcc -E
 CPPFLAGS = 
 CXXCPP = c++ -E
