--- a/configure.in
+++ b/configure.in
@@ -60,6 +60,24 @@ AC_PROG_MAKE_SET
 # Make sure else configure stuff exists.
 AC_CANONICAL_HOST
 
+# declare --enable-* args and collect ac_help strings
+AC_ARG_ENABLE(debug, [  --enable-debug=[no/minimum/yes] turn on debugging [default=yes]],,enable_debug=yes)
+
+dnl setup DEBUG defaults
+if test "x$enable_debug" = "xyes"; then
+  DEBUG_FLAGS="-DG_ENABLE_DEBUG"
+else if test "x$enable_debug" = "xno"; then
+  DEBUG_FLAGS="-DG_DISABLE_CHECKS -DBSE_DISABLE_CAST_CHECKS" # -DG_DISABLE_ASSERT
+else
+  DEBUG_FLAGS="-DGTK_NO_CHECK_CASTS"
+fi fi
+if test "$cflags_set" = set; then
+  CFLAGS="$CFLAGS -g $DEBUG_FLAGS"
+else
+  CFLAGS="$DEBUG_FLAGS"
+fi
+
+
 dnl Foreign defaults:
 MC_IF_VAR_EQ(enable_static, yes, , enable_static=no)
 MC_IF_VAR_EQ(enable_shared, no, , enable_shared=yes)
