use a wrap box for now (far from being perfect in appearance though ;( ).
Fri Oct 29 11:28:21 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.[hc]: use a wrap box for now (far from
        being perfect in appearance though ;( ).

        * beast-gtk/bstsnetrouter.c (bst_snet_router_build_toolbar): add radio
        for mouse_tool button (link, move, properties). (still all radio
        buttons selections are test buttons and non-effective).

        * beast-gtk/icons/mouse_tool.{c,xcf}: new icon mouse_tool, composed out
        of tigert's stock_jump_to.png, stock_properties.png and gnoghurt's
        move-tool.xpm (indicates link, move, properties for mouse
        buttons 1,2,3).

Fri Oct 29 11:27:47 1999  Tim Janik  <timj@gtk.org>

        * bseplugin.c: minor const correctness fixes.

svn path=/trunk/; revision=29

--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -1,4 +1,6 @@
 ## Generated data (by make Makefile.icons)
+icon_list += mouse_tool.c
 icon_list += noicon.c
+icon_list += mouse_tool.xcf
 icon_list += noicon.xcf
 ## Generated data ends here
