new noise generator.
Sun Nov  7 20:48:04 1999  Tim Janik  <timj@gtk.org>

        * bsenoise.[hc]: new noise generator.

        * icons/noicon.xcf:
        * icons/noicon.c: files to be used for objects/procedures that don't
        come with their own icons but want one.

svn path=/trunk/; revision=47

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -19,6 +19,7 @@ Makefile.plugins: $(srcdir)/listplugins.sh *.c Makefile.am
 	$(srcdir)/listplugins.sh *.c >$@
 
 EXTRA_DIST += $(strip \
+        $(EXTRA_HEADERS) \
 	listplugins.sh \
 	TODO \
 )
@@ -31,5 +32,6 @@ include Makefile.plugins
 ##foo_la_SOURCES = foo.c
 ##foo_la_LDFLAGS = -module -avoid-version
 ##foo_la_LIBADD  = $(plugin_libs)
+##EXTRA_HEADERS += foo.h
 ##
 ##plugin_LTLIBRARIES += foo.la
