minor changes for recording frequency, we still have big ISSUEs here.
Sun Nov 14 01:11:09 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmaster.c: minor changes for recording frequency,
        we still have big ISSUEs here.

svn path=/trunk/; revision=54

--- a/configure.in
+++ b/configure.in
@@ -212,6 +212,7 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
     else
 	AC_MSG_RESULT(no)
     fi
+    AC_MSG_WARN(["Beware - we do not currently check for asound.h and libasound correctly"])
     bsealsadevices=
     if test "x$have_alsa" = "xyes"; then
 	AC_MSG_CHECKING(for ALSA sounddriver devices)
