new radio button type that allowes for free toggeling (i.e. working
Mon Nov 15 22:50:38 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstfreeradiobutton.[hc]: new radio button type that allowes
        for free toggeling (i.e. working stand-alone, radio->group is unused).

svn path=/trunk/; revision=59

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -36,6 +36,7 @@ beast_headers = $(strip \
 	bstcanvassource.h \
 	bstdefs.h \
 	bstfiledialog.h \
+	bstfreeradiobutton.h \
 	bstinstrumentview.h \
 	bstitemview.h \
 	bstkeytables.h \
@@ -64,6 +65,7 @@ beast_sources = $(strip \
 	bstcanvaslink.c \
 	bstcanvassource.c \
 	bstfiledialog.c \
+	bstfreeradiobutton.c \
 	bstinstrumentview.c \
 	bstitemview.c \
 	bstkeytables.c \
