reset router mode to "Edit" after a new source has been added.
Sat Nov 20 08:47:50 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c (bst_snet_router_event): reset router mode
        to "Edit" after a new source has been added.

        * beast-gtk/bstparam.c (bst_param_update): took out the automatic
        GtkEntry growing if the new string is wider than the allocation.
        the entry will always grow, because stupid GtkEntry reports always
        reports a requested width >150.
        (bst_param_create): changed default note field width to 50 (from 40),
        feature free radios.

        * beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): popup
        csource paramview for button3, sync on BseSource name changes.

        * beast-gtk/bstcanvassource.[hc] (bst_canvas_source_popup_view): new
        function to popup paramview.

        * configure.in: accept /proc/asound/sndstat as alternative to
        /dev/sndstat if /proc/asound/oss-devices exists.

svn path=/trunk/; revision=62

--- a/configure.in
+++ b/configure.in
@@ -181,12 +181,18 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 	
     dnl OSS-Lite driver check
     AC_MSG_CHECKING(for OSS-Lite sounddriver device)
-    if test -c /dev/dsp && cat /dev/sndstat >/dev/null 2>&1; then
+    have_oss_sndstat=no
+    if test -r /proc/asound/oss-devices && test -r /proc/asound/sndstat; then
+	have_oss_sndstat=yes
+    elif test -r /dev/sndstat; then
+	have_oss_sndstat=yes
+    fi
+    if test -c /dev/dsp && test "$have_oss_sndstat" = yes; then
 	bseossdevice=\"/dev/dsp\"
 	bse_have_snddev=yes
 	AC_MSG_RESULT(/dev/dsp)
     #elif test -c /dev/dsp1 && cat /dev/sndstat >/dev/null 2>&1; then
-    #	bseossdevice=\"/dev/dsp\"
+    #	bseossdevice=\"/dev/dsp1\"
     #	bse_have_snddev=yes
     #	AC_MSG_RESULT(/dev/dsp1)
     else
