added functions (bse_project_start_playback): retrigger playback for all
Sat Dec  4 23:48:57 1999  Tim Janik  <timj@gtk.org>

        * bseproject.[hc]: added functions
        (bse_project_start_playback): retrigger playback for all supers.
        (bse_project_stop_playback): reset all currently playing supers.

        * bsesnet.c:
        (bse_snet_prepare): lock object (and globals).
        (bse_snet_reset): unlock object (and globals).

        * bsesong.c:
        (bse_song_prepare): lock object (and globals).
        (bse_song_reset): unlock object (and globals).

        * bsesongsequencer.c: no need to do locking in
        bse_song_sequencer_destroy() and bse_song_sequencer_setup() that's what
        the BseSource PREPARED state cares about.

        * bsesource.c (bse_source_reset): finally got around to implement
        this function ;)

Sat Dec  4 20:59:22 1999  Tim Janik  <timj@gtk.org>

        * got rid of a bunch of dead sources: bsetext.[hc], bsestream.[hc],
        bsefilestream.[hc], bsenullstream.[hc], bsepcmstream.[hc],
        bsepcmstream-oss.[hc] and bsemaster.[hc].
        removed olaf's testmixer.c, look at ../test/testmixer.bse.

Sat Dec  4 16:30:14 1999  Tim Janik  <timj@gtk.org>

        * bsesource.[hc]: introduce (*skip_chunk)() member function. per cycle
        we now guarrantee that either calc_chunk() or skip_chunk() gets called
        per output channel. even if no output sources are connected to this
        channel.
        (bse_source_do_prepare):
        (bse_source_do_reset): attach/detach to from BseHeart.

Fri Dec  3 23:44:22 1999  Tim Janik  <timj@gtk.org>

        * bsesource.[hc]: source flag cleanups, introduced *attached flags for
        BseHeart.

        * bsemain.c (bse_parse_args): construct the debug keys from generated
        enum list.

        * *.[hc]: generic objetc flags cleanups, s/BSE_DEBUG/BSE_IF_DEBUG/.

Thu Dec  2 21:36:00 1999  Tim Janik  <timj@gtk.org>

        * bsesource.[hc]: removed pausin

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -62,21 +62,19 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseeffectvolumedelta.h \
 	bseenums.h \
 	bseexports.h \
-	bsefilestream.h \
 	bseglobals.h \
+	bseheart.h \
 	bseinstrument.h \
 	bseitem.h \
 	bsemagic.h \
 	bsemain.h \
-	bsemaster.h \
 	bsemixer.h \
-	bsenullstream.h \
 	bseobject.h \
 	bseparam.h \
 	bseparasite.h \
 	bsepattern.h \
-	bsepcmstream.h \
-	bsepcmstream-oss.h \
+	bsepcmdevice.h \
+	bsepcmdevice-oss.h \
 	bseplugin.h \
 	bseprocedure.h \
 	bseproject.h \
@@ -86,9 +84,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsesongsequencer.h \
 	bsesource.h \
 	bsestorage.h \
-	bsestream.h \
 	bsesuper.h \
-	bsetext.h \
 	bsetype.h \
 	bseutils.h \
 	glib-extra.h \
@@ -110,22 +106,20 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseeffectpatternjump.c \
 	bseeffectvolumedelta.c \
 	bseenums.c \
-	bsefilestream.c \
 	bseglobals.c \
+	bseheart.c \
 	bseinstrument.c \
 	bseitem.c \
 	bsemagic.c \
 	bsemain.c \
-	bsemaster.c \
 	bsemixer.c \
-	bsenullstream.c \
 	bseobject.c \
 	bseparam.c \
 	bseparasite.c \
 	bseparamcol.c \
 	bsepattern.c \
-	bsepcmstream.c \
-	bsepcmstream-oss.c \
+	bsepcmdevice.c \
+	bsepcmdevice-oss.c \
 	bseplugin.c \
 	bseprocedure.c \
 	bseproject.c \
@@ -135,9 +129,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsesongsequencer.c \
 	bsesource.c \
 	bsestorage.c \
-	bsestream.c \
 	bsesuper.c \
-	bsetext.c \
 	bsetype.c \
 	bseutils.c \
 	bsevoice.c \
@@ -297,14 +289,13 @@ all: @MISSING_ETAGS@ @BIRNET_Y@ TAGS
 #
 # other programs, we want to compile
 #
-noinst_PROGRAMS = bsequery testtypes testsample testsong testmixer testrefs
+noinst_PROGRAMS = bsequery testtypes testsample testsong testrefs
 # source files
 testtypes_SOURCES = testtypes.c
 testrefs_SOURCES = testrefs.c
 testsample_SOURCES = testsample.c
 bsequery_SOURCES = bsequery.c
 testsong_SOURCES = testsong.c
-testmixer_SOURCES = testmixer.c
 # link programs against BSE
 progs_LDADD = libbse.la
 testtypes_LDADD = $(progs_LDADD)
@@ -312,7 +303,6 @@ testrefs_LDADD = $(progs_LDADD)
 testsample_LDADD = $(progs_LDADD)
 bsequery_LDADD = $(progs_LDADD)
 testsong_LDADD = $(progs_LDADD)
-testmixer_LDADD = $(progs_LDADD)
 
 
 #
