removed gle dependancy.
Mon Dec  6 02:35:37 1999  Tim Janik  <timj@gtk.org>

        * configure.in: removed gle dependancy.

        * beast-gtk/glewidgets.[hc]: source files containing headers and
        implementations of gtkcluehunter.[hc], gtkwrapbox.[hc],
        gtkhwrapbox.[hc], gtkvwrapbox.[hc], gtk_idle_show_widget() and
        gtk_file_selection_heal() out of the gle source tree.

        * beast-gtk/gle-pull.sh: script to pull gle sources.

        * beast-gtk/bstdefs.h: remove gle includes, include glewidgets.h.

        * beast-gtk/bstapp.[hc]: remove gle dependancies.

        * beast-gtk/bstmain.c: removed gle dependancies.

        * beast-gtk/beast.glr: got rid of that.

Sun Dec  5 18:11:31 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstparam.c (bst_param_create): grow BseTime entry.

svn path=/trunk/; revision=76

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -55,6 +55,7 @@ beast_headers = $(strip \
 	bstsupershell.h \
 	bstxkb.h \
 	bstzoomedwindow.h \
+	glewidgets.h \
 	gnomeforest.h \
 )
 # BEAST c sources to build the program from
@@ -83,6 +84,7 @@ beast_sources = $(strip \
 	bstsupershell.c \
 	bstxkb.c \
 	bstzoomedwindow.c \
+	glewidgets.c \
 	gnomeforest.c \
 )
 # BEAST c sources that get included (don't have own .lo rules)
@@ -93,7 +95,6 @@ beast_extra_sources = $(strip \
 )
 # BEAST program data files
 beast_pdata_DATA = $(strip \
-	beast.glr \
 )
 # BEAST built sources that don't get installed
 beast_built_sources = $(strip \
