--- a/configure.in
+++ b/configure.in
@@ -149,12 +149,13 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
 
     dnl We need GLE also (and asume it is installed in the same
     dnl prefix as Gtk+ or GNOME)
-    AC_CHECK_LIB(gle, gle_init,
-	BEAST_LIBS="-lgle $BEAST_LIBS"
-	,
-	AC_MSG_ERROR(Unable to find GLE - it is required to build BEAST),
-	$BEAST_LIBS
-    )
+    GLE_LIBS=
+#    AC_CHECK_LIB(gle, gle_init,
+#	BEAST_LIBS="-lgle $BEAST_LIBS"
+#	,
+#	AC_MSG_ERROR(Unable to find GLE - it is required to build BEAST),
+#	$BEAST_LIBS
+#    )
     AC_SUBST(GLE_LIBS)
 	
     dnl Default keytable patch
