--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -3,12 +3,14 @@ icon_list += amp.c
 icon_list += any.c
 icon_list += mic.c
 icon_list += noicon.c
+icon_list += pipe.c
 icon_list += sine.c
 icon_list += speaker.c
 icon_list += testos.c
 icon_list += amp.xcf
 icon_list += mic.xcf
 icon_list += noicon.xcf
+icon_list += pipe.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
 ## Generated data ends here
