start playback with read() here already, normally select(in) should do,
Sun Dec 12 04:50:19 1999  Tim Janik  <timj@gtk.org>

        * bsepcmdevice-oss.c (bse_pcm_device_oss_open): start playback with
        read() here already, normally select(in) should do, but that is not
        the case for pseudo-OSS drivers in the kernel.

        * bsepcmdevice-oss.c (bse_pcm_device_oss_update_caps): fixed bug with
        max_fragment_size readout, this could stop OSS card drivers from
        working if they supported all fragment sizes we check for.

        * <sigh> duplex still doesn't work correctly here, this defers further
        work until i got a new machine that *does* work in duplex mode. it's
        certainly not the fault of all the 3 soundcards and 5 drivers that i
        eventually tested here ;(

Sat Dec 11 05:34:17 1999  Tim Janik  <timj@gtk.org>

        * bsetype.h (BSE_DUMMY_TYPE): install a dummy type, needed when normal
        type defs had to be disabled.

        * bsepcmdevice-alsa.[hc]: first implementation of an ALSA based pcm
        driver.

Fri Dec 10 16:19:51 1999  Tim Janik  <timj@gtk.org>

        * bsesource.c (bse_source_default_skip_chunk): hm, changed ckip_chunk()
        semantics, reinvoking calc_chunk() doesn't really go along with
        different source cycle indices. unless we change skip_chunk() to be
        comprehensively called for all BseHeart sources before the global
        index is increased, one basically can't call ref_chunk() from
        this method.

Fri Dec 10 08:26:00 1999  Tim Janik  <timj@gtk.org>

        * bsesnet.c (bse_snet_reset): reset all sources that we serve
        as a container for.

        * bsesource.c: we prepare isource in two cases, for osources that
        are already prepared and get a new isource, for osources that are
        currently being prepared and have isources as input.
        we mostly do not reset sources anymore.

Thu Dec  9 23:55:00 1999  Tim Janik  <timj@gtk.org>

      

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -75,6 +75,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsepattern.h \
 	bsepcmdevice.h \
 	bsepcmdevice-oss.h \
+	bsepcmdevice-alsa.h \
 	bseplugin.h \
 	bseprocedure.h \
 	bseproject.h \
@@ -120,6 +121,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsepattern.c \
 	bsepcmdevice.c \
 	bsepcmdevice-oss.c \
+	bsepcmdevice-alsa.c \
 	bseplugin.c \
 	bseprocedure.c \
 	bseproject.c \
@@ -255,16 +257,6 @@ bseconfigpaths.h: $(top_srcdir)/configure bseconfig.h Makefile
 	&& echo "#define BSE_PATH_DATA     \"${bsedatadir}\"" >> xgen-bcph \
 	&& echo "#define BSE_PATH_LIB      \"${bselibdir}\"" >> xgen-bcph \
 	&& echo "#define BSE_PATH_PLUGINS  (BSE_PATH_LIB \"/plugins\")" >> xgen-bcph \
-	&& if test -z '$(bseossdevice)' ; then \
-	     echo '#undef BSE_PATH_DEVICE_OSS' >> xgen-bcph ; \
-	   else \
-	     echo '#define BSE_PATH_DEVICE_OSS $(bseossdevice)' >> xgen-bcph ; \
-	   fi \
-	&& if test -z '$(bsealsadevices)' ; then \
-	     echo '#undef BSE_PATH_DEVICE_LIST_ALSA' >> xgen-bcph ; \
-	   else \
-	     echo '#define BSE_PATH_DEVICE_LIST_ALSA $(bsealsadevices)' >> xgen-bcph ; \
-	   fi \
 	&& echo >> xgen-bcph \
 	&& echo "/* Generated data ends here */" >> xgen-bcph \
 	&& (cmp -s xgen-bcph $@ || cp xgen-bcph $@) \
