--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -1,6 +1,13 @@
 ## Generated data (by make Makefile.icons)
 icon_list += mouse_tool.c
+icon_list += no_ilink.c
+icon_list += no_olink.c
 icon_list += noicon.c
+icon_list += properties.c
+icon_list += trash.c
 icon_list += mouse_tool.xcf
+icon_list += no_olink.xcf
 icon_list += noicon.xcf
+icon_list += properties.xcf
+icon_list += trash.xcf
 ## Generated data ends here
