group cut off parameters.
Thu Dec 16 08:08:35 1999  Tim Janik  <timj@gtk.org>

        * bsefirfilter.c (bse_fir_filter_class_init): group cut off parameters.

        * bsegenosc.[hc]: removed amplitude modulation input channel.

svn path=/trunk/; revision=90

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -33,6 +33,13 @@ bseloopback_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS += bseloopback.h
 
 ##
+## Plugin bsemult
+##
+bsemult_la_SOURCES = bsemult.c
+bsemult_la_LDFLAGS = -module -avoid-version
+bsemult_la_LIBADD  = $(plugin_libs)
+
+##
 ## Plugin bsenoise
 ##
 bsenoise_la_SOURCES = bsenoise.c
@@ -60,6 +67,7 @@ plugin_LTLIBRARIES += \
 	bsefirfilter.la \
 	bsegenosc.la \
 	bseloopback.la \
+	bsemult.la \
 	bsenoise.la \
 	greeting.la \
 	hello-space.la
