--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,8 +1,6 @@
 EXTRA_DIST = $(strip \
 	bse-categories.txt \
-	bse-concept.txt \
 	bse-data-v1.txt \
-	bse-ep-net.txt \
-	bse-pool-sources.txt \
+	bse-networks.txt \
 	bse-typesystem.txt \
 )
