provide button3 popup by default to close window (should have a close
Tue Dec 21 20:48:45 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c (bst_subwindow_new): provide button3 popup by
        default to close window (should have a close button also i guess).

svn path=/trunk/; revision=103

--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -1,10 +1,12 @@
 ## Generated data (by make Makefile.icons)
+icon_list += close.c
 icon_list += mouse_tool.c
 icon_list += no_ilink.c
 icon_list += no_olink.c
 icon_list += noicon.c
 icon_list += properties.c
 icon_list += trash.c
+icon_list += close.xcf
 icon_list += mouse_tool.xcf
 icon_list += no_olink.xcf
 icon_list += noicon.xcf
