if no host object to watch for destruction is given, add an automatic quit
Wed Dec 29 14:37:40 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c (bst_subwindow_new): if no host object to watch
        for destruction is given, add an automatic quit handler.

        * beast-gtk/bstapp.c: provide a File/Dialog/Device Monitor menu item
        to popup BseHeart dialog.

        * beast-gtk/bstheartmonitor.[hc]: new files coming with a preliminary
        dialog to edit BSE's heart latency.

        * docs/bse-heart.txt: a bit of restructuring and a bunch of minor
        corrections and changes.

svn path=/trunk/; revision=115

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -37,6 +37,7 @@ beast_headers = $(strip \
 	bstdefs.h \
 	bstfiledialog.h \
 	bstfreeradiobutton.h \
+	bstheartmonitor.h \
 	bstinstrumentview.h \
 	bstitemview.h \
 	bstkeytables.h \
@@ -65,6 +66,7 @@ beast_sources = $(strip \
 	bstcanvassource.c \
 	bstfiledialog.c \
 	bstfreeradiobutton.c \
+	bstheartmonitor.c \
 	bstinstrumentview.c \
 	bstitemview.c \
 	bstkeytables.c \
