--- a/configure.in
+++ b/configure.in
@@ -14,11 +14,12 @@ AC_PREREQ(2.13)
 # BSE version numbers
 #
 BSE_MAJOR_VERSION=0
-BSE_MINOR_VERSION=2
+BSE_MINOR_VERSION=3
 BSE_MICRO_VERSION=0
 BSE_INTERFACE_AGE=0
 BSE_BINARY_AGE=0
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
+BST_VERSION=$BSE_VERSION
 dnl#
 dnl# Making releases:
 dnl#   BSE_MICRO_VERSION += 1;
@@ -34,6 +35,7 @@ AC_SUBST(BSE_MICRO_VERSION)
 AC_SUBST(BSE_INTERFACE_AGE)
 AC_SUBST(BSE_BINARY_AGE)
 AC_SUBST(BSE_VERSION)
+AC_SUBST(BST_VERSION)
 
 # compute libtool versions
 LT_RELEASE=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION
@@ -98,7 +100,7 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     AC_SUBST(BSE_LIBS)
 	
     bsedatadir=$datadir/bse
-    bselibdir=$libdir/bse/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION
+    bselibdir=$libdir/bse/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
     AC_SUBST(bsedatadir)
     AC_SUBST(bselibdir)
 ])
@@ -190,10 +192,9 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     AC_SUBST(BEAST_CFLAGS)
     AC_SUBST(BEAST_LIBS)
 
-    # BEAST program data
-    beastpdatadir=$datadir/beast/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
-    AC_SUBST(beastpdatadir)
-	
+    # BEAST version
+    AC_DEFINE_UNQUOTED(BST_VERSION, "$BST_VERSION")
+
     # BEAST data from beast-data package
     beastdatadir=$datadir/beast/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION
     AC_SUBST(beastdatadir)
