--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,7 @@
 SRC_SUBDIRS = bse plugins beast-gtk
 
 # other subdirs
-SUBDIRS = $(SRC_SUBDIRS) docs
+SUBDIRS = $(SRC_SUBDIRS) docs test
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
