added adjustable compressor.
Fri Jan  7 23:26:26 2000  Tim Janik  <timj@gtk.org>

        * bsecompressor.[hc]: added adjustable compressor.

Mon Jan  3 16:50:55 2000  Tim Janik  <timj@gtk.org>

        * Makefile.am (plugindir): use value from $(bseplugindir).

svn path=/trunk/; revision=136

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -17,6 +17,14 @@ bsecapture_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS += bsecapture.h
 
 ##
+## Plugin bsecompressor
+##
+bsecompressor_la_SOURCES = bsecompressor.c
+bsecompressor_la_LDFLAGS = -module -avoid-version
+bsecompressor_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS += bsecompressor.h
+
+##
 ## Plugin bsefirfilter
 ##
 bsefirfilter_la_SOURCES = bsefirfilter.c
@@ -74,6 +82,7 @@ hello_space_la_LIBADD  = $(plugin_libs)
 plugin_LTLIBRARIES += \
 	bseadder.la \
 	bsecapture.la \
+	bsecompressor.la \
 	bsefirfilter.la \
 	bsegenosc.la \
 	bseloopback.la \
